<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp" >
		
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText 
            android:id="@+id/EditText_search_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_address" 
            android:singleLine = "true" />

        <Button 
            android:id="@+id/Button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_search"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">
 				
        <Button 
            android:id="@+id/Button_option_default" 
            android:layout_width="0dp" 
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/geo_name" />
 				
        <Button 
            android:id="@+id/Button_option_gps" 
            android:layout_width="0dp" 
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_button_gps" />
 				
        <Button 
            android:id="@+id/Button_dialog_close" 
            android:layout_width="0dp" 
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_button_close" />

    </LinearLayout>
		
</LinearLayout>